--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="header">
             <div class="container">
                 <nav>
-                    <img src="images/VINEETH__2_-removebg-preview.png" class="logo">
+                    <img src="VINEETH__2_-removebg-preview.png" class="logo">
                     <ul id="sidemenu">
                         <li><a href="#header">Home</a></li>
                         <li><a href="#about">About</a></li>
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/usrmoi.jpg">
+                        <img src="usrmoi.jpg">
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
@@ -155,7 +155,7 @@
                 <h1 class="sub-title">My Projects</h1>
                 <div class="work-list">
                 <div class="work">
-                    <img src="images/freepik__upload__28520.png" >
+                    <img src="freepik__upload__28520.png" >
                     <div class="layer">
                         <h3>Learning Managment System</h3>
                         <p>I developed a web application to manage courses and lectures, improving performance, security, and user experience. By optimizing APIs, enhancing data retrieval, and implementing JWT-based security, I streamlined administrative tasks. Real-time updates were added with WebSockets, and thorough testing ensured high reliability, leading to improved course completion rates and user protection.</p>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png" >
+                    <img src="work-2.png" >
                     <div class="layer">
                         <h3>Social Media Dashboard</h3>
                         <p>Developed a Social Media Dashboard within the DENAURLEN application to provide comprehensive analytics and data
@@ -173,7 +173,7 @@
 
                 </div>
                 <div class="work">
-                    <img src="images/KSHEERA.jpg" >
+                    <img src="KSHEERA.jpg" >
                     <div class="layer">
                         <h3>Ksheera Autonomous Underwater Vehicle</h3>
                         <p>Led the development of an AUV network for oceanic data collection, designing robots for navigation and data
@@ -201,7 +201,7 @@
                     <a href=""><i class="fa-brands fa-linkedin"></i>></a>
                     <a href=""><i class="fa-brands fa-linkedin"></i>></a>
                 </div>
-                <a href="images/vineeth-resume-Adobe-edited.pdf" download class="btn btn2">Download Resume</a>
+                <a href="vineeth-resume-Adobe-edited.pdf" download class="btn btn2">Download Resume</a>
             </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
