--- a/index.html
+++ b/index.html
@@ -162,6 +162,18 @@
                             <a href="#"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
+
+                <div class="work">
+                <img src="Chat-Bot_FirstDraft.jpg" >
+                <div class="layer">
+                <h3>Chat-Bot As A Service</h3>
+                        <p>- Built a full-stack AI chatbot using Spring Boot and React.js with real-time messaging via WebSockets and REST APIs, improving speed by 35%.  
+                            - Integrated Auth0 for secure authentication and OpenAI API for chatbot responses, reducing response time by 30%.  
+                            - Designed an optimized PostgreSQL database with Spring Data JPA, improving query performance by 25%.  
+                            - Dockerized and deployed the app on AWS using Docker Compose, cutting deployment setup time by 40%.</p>
+                            <a href="#"><i class="fa-solid fa-link"></i></a>
+                    </div>
+                </div>
                 <div class="work">
                     <img src="work-2.png" >
                     <div class="layer">
@@ -170,8 +182,8 @@
                             insights for user posts.</p>
                             <a href="#"><i class="fa-solid fa-link"></i></a>
                     </div>
-
                 </div>
+                    
                 <div class="work">
                     <img src="KSHEERA.jpg" >
                     <div class="layer">
