--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
                     </div>
                 </div>
                 <div class="work">
+                <img src="EMPLOYEEMANAGE.jpg" >
+                <div class="layer">
+                <h3>Employee Management System</h3>
+                <p> •   Developed a microservices-based e-commerce backend, improving efficiency by 20% in product management and 25% in checkout times, while reducing stock update delays by 15%.
+                    •	Integrated secure payment processing with Stripe and established a persistent shopping cart, enhancing user experience and transaction reliability.
+                    •	Achieved 99.9% uptime using Spring Cloud for resilience and deployed with Docker and Kubernetes, resulting in a 30% increase in overall system performance.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+                </div>
+                <div class="work">
                     <img src="work-2.png" >
                     <div class="layer">
                         <h3>Social Media Dashboard</h3>
