--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
                     <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
                 </div>
+                </div>
+                <div class="work-list">
                 <div class="work">
                     <img src="work-2.png" >
                     <div class="layer">
