--- a/index.html
+++ b/index.html
@@ -195,7 +195,14 @@
                             <a href="#"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
-                    
+                    <div class="work">
+                        <img src="E-DaVinci.jpg" >
+                        <div class="layer">
+                            <h3>E-Commere website</h3>
+                            <p>E-DaVinci is a MERN stack-based e-commerce platform for buying and selling paintings. Built with React.js, Node.js, Express.js, and MongoDB, it offers a seamless user experience with features like JWT authentication, an admin dashboard, reviews & ratings, and a secure checkout system using Stripe/PayPal. Users can browse artwork, add items to the cart, and artists can create profiles to sell their work. While not yet deployed, the project demonstrates my full-stack development expertise in building scalable applications.</p>
+                                <a href="#"><i class="fa-solid fa-link"></i></a>
+                        </div>
+                    </div>
                 <div class="work">
                     <img src="KSHEERA.jpg" >
                     <div class="layer">
