--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
-                        <p>I am a passionate full stack Java developer with a strong foundation in backend and frontend development. My expertise lies in<span style ="font-weight: bold;color: #f90a56;"> Java</span>,<span style = "font-weight: bold;color: #f90a56;"> Spring Boot</span>, and<span style = "font-weight: bold;color: #f90a56;"> J2EE</span>, where I design and build scalable, high-performance applications. I have experience working with <span style ="font-weight: bold;color: #f90a56;"> RESTful APIs</span>, and cloud technologies like <span style ="font-weight: bold;color: #f90a56;">AWS</span>, <span style ="font-weight: bold;color: #f90a56;">Kubernetes</span>, and <span style ="font-weight: bold;color: #f90a56;">Docker</span> to develop efficient and reliable systems.
-                            Beyond backend development, I am skilled in <span style ="font-weight: bold;color: #f90a56;">React.js</span>,<span style ="font-weight: bold;color: #f90a56;">JavaScript</span>, and UI frameworks, allowing me to create seamless and user-friendly interfaces. My hands-on experience with databases like<span style ="font-weight: bold;color: #f90a56;"> MySQL</span>,<span style ="font-weight: bold;color: #f90a56;"> PostgreSQL</span>, and <span style ="font-weight: bold;color: #f90a56;">MongoDB</span>, along with <span style ="font-weight: bold;color: #f90a56;">CI/CD pipelines</span> and <span style ="font-weight: bold;color: #f90a56;">DevOps tools</span>, ensures smooth application deployment and maintenance.
+                        <p>I am a passionate full stack Java developer with a strong foundation in backend and frontend development. My expertise lies in<span style ="font-weight: bold;color: #008B8B;"> Java</span>,<span style = "font-weight: bold;color: #008B8B;"> Spring Boot</span>, and<span style = "font-weight: bold;color: #008B8B;"> J2EE</span>, where I design and build scalable, high-performance applications. I have experience working with <span style ="font-weight: bold;color: #008B8B;"> RESTful APIs</span>, and cloud technologies like <span style ="font-weight: bold;color: #008B8B;">AWS</span>, <span style ="font-weight: bold;color: #008B8B;">Kubernetes</span>, and <span style ="font-weight: bold;color: #008B8B;">Docker</span> to develop efficient and reliable systems.
+                            Beyond backend development, I am skilled in <span style ="font-weight: bold;color: #008B8B;">React.js</span>,<span style ="font-weight: bold;color: #008B8B;">JavaScript</span>, and UI frameworks, allowing me to create seamless and user-friendly interfaces. My hands-on experience with databases like<span style ="font-weight: bold;color: #008B8B;"> MySQL</span>,<span style ="font-weight: bold;color: #008B8B;"> PostgreSQL</span>, and <span style ="font-weight: bold;color: #008B8B;">MongoDB</span>, along with <span style ="font-weight: bold;color: #008B8B;">CI/CD pipelines</span> and <span style ="font-weight: bold;color: #008B8B;">DevOps tools</span>, ensures smooth application deployment and maintenance.
                             Through internships and projects, I have worked on real-world applications, including a learning management system and an e-commerce platform, optimizing performance and enhancing user experience. I am eager to continue building innovative solutions and growing as a software engineer in dynamic environments.</p>
                              <div class="tab-title">
                                 <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
@@ -115,24 +115,24 @@
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h2>Software Development</h2>
-                    <p>Designed <span style ="font-weight: bold;color: #f90a56;">RESTful APIs with Spring Web</span>, achieving a 30% reduction in response time and a 25% boost in data retrieval speed using <span style ="font-weight: bold;color: #f90a56;">Spring Data
+                    <p>Designed <span style ="font-weight: bold;color: #008B8B;">RESTful APIs with Spring Web</span>, achieving a 30% reduction in response time and a 25% boost in data retrieval speed using <span style ="font-weight: bold;color: #008B8B;">Spring Data
                         JPA.</span>
 
-                        Established <span style ="font-weight: bold;color: #f90a56;">JWT-based security</span> for role-based access control, enhancing user data protection by 40%.
-                        Created modules for course and lecture management,<span style ="font-weight: bold;">administrative overhead by 15%</span>
+                        Established <span style ="font-weight: bold;color: #008B8B;">JWT-based security</span> for role-based access control, enhancing user data protection by 40%.
+                        Created modules for course and lecture management,<span style ="font-weight: bold;color: #008B8B;">administrative overhead by 15%</span>
 
                         Integrated progress tracking and quiz management features, improving course completion rates by 20%.
-                        Utilized Web socket for real-time updates and <span style ="font-weight: bold;color: #f90a56;">documented APIs with Swagger/OpenAPI</span>, achieving 90% code coverage through thorough unit</p>
+                        Utilized Web socket for real-time updates and <span style ="font-weight: bold;color: #008B8B;">documented APIs with Swagger/OpenAPI</span>, achieving 90% code coverage through thorough unit</p>
                     <a href="#">Learn More</a>
 
                 </div>
                 <div>
                     <i class="fa-regular fa-window-restore"></i>
                     <h2>Web Development</h2>
-                    <p>Improved website responsiveness and enhanced user experience by optimizing loading time by 25% using <span style ="font-weight: bold;color: #f90a56;">JavaScript frameworks (React.js,
+                    <p>Improved website responsiveness and enhanced user experience by optimizing loading time by 25% using <span style ="font-weight: bold;color: #008B8B;">JavaScript frameworks (React.js,
                         JQuery) and CSS animations</span>, resulting in a 15% increase in user retention.
 
-                        Integrated <span style ="font-weight: bold;color: #f90a56;">Bootstrap</span> for consistent and responsive UI, ensuring cross-platform compatibility across desktop and mobile devices, leading
+                        Integrated <span style ="font-weight: bold;color: #008B8B;">Bootstrap</span> for consistent and responsive UI, ensuring cross-platform compatibility across desktop and mobile devices, leading
                         to a 10% increase in mobile traffic</p>
                     <a href="#">Learn More</a>
                 </div>
@@ -141,9 +141,9 @@
                     <h2>Full Stack Development</h2>
                     <p>Developed a microservices-based e-commerce backend, improving efficiency by 20% in product management and 25% in checkout
                         times, while reducing stock update delays by 15%.
-                        Integrated secure payment processing with <span style ="font-weight: bold;color: #f90a56;">Stripe</span> and established a persistent shopping cart, enhancing user experience and
+                        Integrated secure payment processing with <span style ="font-weight: bold;color: #008B8B;">Stripe</span> and established a persistent shopping cart, enhancing user experience and
                         transaction reliability.
-                        Achieved 99.9% uptime using <span style ="font-weight: bold;color: #f90a56;">Spring Cloud</span> for resilience and deployed with <span style ="font-weight: bold;color: #f90a56;">Docker</span> and <span style ="font-weight: bold;color: #f90a56;">Kubernetes</span>, resulting in a 30% increase
+                        Achieved 99.9% uptime using <span style ="font-weight: bold;color: #008B8B;">Spring Cloud</span> for resilience and deployed with <span style ="font-weight: bold;color: #008B8B;">Docker</span> and <span style ="font-weight: bold;color: #008B8B;">Kubernetes</span>, resulting in a 30% increase
                         in overall system performance</p>
                     <a href="#">Learn More</a>
                 </div>
