--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     <p>
                                         <span style ="font-weight: bold;color: #f90a56;">Coursework:</span> Data Base Management System, JAVA Object-Oriented Programming, Python Programming, Machine Learning.
                                     </p>
-                                    <li><span>Placholdr</span><br>placholdr</li>
+                                    <!--<li><span>Placholdr</span><br>placholdr</li>-->
                                 </ul>
                             </div>
                     </div>
@@ -123,7 +123,7 @@
 
                         Integrated progress tracking and quiz management features, improving course completion rates by 20%.
                         Utilized Web socket for real-time updates and <span style ="font-weight: bold;color: #008B8B;">documented APIs with Swagger/OpenAPI</span>, achieving 90% code coverage through thorough unit</p>
-                    <a href="#">Learn More</a>
+                    <a href="https://www.linkedin.com/in/vineeth-yelagandula">Learn More</a>
 
                 </div>
                 <div>
@@ -134,7 +134,7 @@
 
                         Integrated <span style ="font-weight: bold;color: #008B8B;">Bootstrap</span> for consistent and responsive UI, ensuring cross-platform compatibility across desktop and mobile devices, leading
                         to a 10% increase in mobile traffic</p>
-                    <a href="#">Learn More</a>
+                    <a href="https://www.linkedin.com/in/vineeth-yelagandula">Learn More</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
@@ -145,7 +145,7 @@
                         transaction reliability.
                         Achieved 99.9% uptime using <span style ="font-weight: bold;color: #008B8B;">Spring Cloud</span> for resilience and deployed with <span style ="font-weight: bold;color: #008B8B;">Docker</span> and <span style ="font-weight: bold;color: #008B8B;">Kubernetes</span>, resulting in a 30% increase
                         in overall system performance</p>
-                    <a href="#">Learn More</a>
+                    <a href="https://www.linkedin.com/in/vineeth-yelagandula">Learn More</a>
                 </div>
             </div>
         </div>
@@ -154,14 +154,6 @@
             <div class="container">
                 <h1 class="sub-title">My Projects</h1>
                 <div class="work-list">
-                <div class="work">
-                    <img src="freepik__upload__28520.png" >
-                    <div class="layer">
-                        <h3>Learning Managment System</h3>
-                        <p>I developed a web application to manage courses and lectures, improving performance, security, and user experience. By optimizing APIs, enhancing data retrieval, and implementing JWT-based security, I streamlined administrative tasks. Real-time updates were added with WebSockets, and thorough testing ensured high reliability, leading to improved course completion rates and user protection.</p>
-                            <a href="#"><i class="fa-solid fa-link"></i></a>
-                    </div>
-                </div>
 
                 <div class="work">
                 <img src="Chat-Bot_FirstDraft.jpg" >
@@ -171,7 +163,7 @@
                             - Integrated Auth0 for secure authentication and OpenAI API for chatbot responses, reducing response time by 30%.  
                             - Designed an optimized PostgreSQL database with Spring Data JPA, improving query performance by 25%.  
                             - Dockerized and deployed the app on AWS using Docker Compose, cutting deployment setup time by 40%.</p>
-                            <a href="#"><i class="fa-solid fa-link"></i></a>
+                            <a href="https://github.com/Yelagandula/ChatBotAsAServiceWithMultipleUsersConcurrently"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -181,8 +173,16 @@
                 <p> •   Developed a microservices-based e-commerce backend, improving efficiency by 20% in product management and 25% in checkout times, while reducing stock update delays by 15%.
                     •	Integrated secure payment processing with Stripe and established a persistent shopping cart, enhancing user experience and transaction reliability.
                     •	Achieved 99.9% uptime using Spring Cloud for resilience and deployed with Docker and Kubernetes, resulting in a 30% increase in overall system performance.</p>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <a href="https://github.com/Yelagandula/Employee-Managament-Dashboard"><i class="fa-solid fa-link"></i></a>
                 </div>
+                </div>
+                <div class="work">
+                    <img src="freepik__upload__28520.png" >
+                    <div class="layer">
+                        <h3>Learning Managment System</h3>
+                        <p>I developed a web application to manage courses and lectures, improving performance, security, and user experience. By optimizing APIs, enhancing data retrieval, and implementing JWT-based security, I streamlined administrative tasks. Real-time updates were added with WebSockets, and thorough testing ensured high reliability, leading to improved course completion rates and user protection.</p>
+                            <a href="https://github.com/Yelagandula/LMS"><i class="fa-solid fa-link"></i></a>
+                    </div>
                 </div>
                 </div>
                 <div class="work-list">
@@ -192,7 +192,7 @@
                         <h3>Social Media Dashboard</h3>
                         <p>Developed a Social Media Dashboard within the DENAURLEN application to provide comprehensive analytics and data
                             insights for user posts.</p>
-                            <a href="#"><i class="fa-solid fa-link"></i></a>
+                            <a href="https://github.com/Yelagandula/Java_Application_Demo"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                     <div class="work">
@@ -200,7 +200,7 @@
                         <div class="layer">
                             <h3>E-Commere website</h3>
                             <p>E-DaVinci is a MERN stack-based e-commerce platform for buying and selling paintings. Built with React.js, Node.js, Express.js, and MongoDB, it offers a seamless user experience with features like JWT authentication, an admin dashboard, reviews & ratings, and a secure checkout system using Stripe/PayPal. Users can browse artwork, add items to the cart, and artists can create profiles to sell their work. While not yet deployed, the project demonstrates my full-stack development expertise in building scalable applications.</p>
-                                <a href="#"><i class="fa-solid fa-link"></i></a>
+                                <a href="https://github.com/Yelagandula/Online-E-Commerce-Website"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 <div class="work">
@@ -210,11 +210,11 @@
                         <p>Led the development of an AUV network for oceanic data collection, designing robots for navigation and data
                             collection, implementing data analysis algorithms for evaluating ocean conditions, and securing $2000 in funding for
                             the KSHEERA project.</p>
-                            <a href="#"><i class="fa-solid fa-link"></i></a>
+                            <a href="https://github.com/Yelagandula/CPP_Webots"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                 </div>
-                <a href="#" class="btn">See More</a>
+                <a href="https://github.com/Yelagandula?tab=repositories" class="btn">See More</a>
             </div>
         </div>
 
