--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <a href=""><i class="fa-brands fa-linkedin"></i>></a>
                     <a href=""><i class="fa-brands fa-linkedin"></i>></a>
                 </div>
-                <a href="vineeth-resume-Adobe-edited.pdf" download class="btn btn2">Download Resume</a>
+                <a href="Vineeth_Resume-FINAL.pdf" download class="btn btn2">Download Resume</a>
             </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
