--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <!-- writ th stuff for xpirinc -->    
                             <div class="tab-contents" id="Experience">
                                 <ul>
-                                    <li><span>January 2023 - July 2023</span><br>Full Stack Developer Intern</li>
+                                    <li><span>July 2022 - July 2023</span><br>Full Stack Developer</li>
                                     <p>
                                         Designed and implemented a user analytics dashboard using the MERN stack (MongoDB, Express, React.js, Node.js), improving user
                                         engagement by 15% through real-time insights and data visualization.
@@ -74,12 +74,12 @@
                                         Improved customer experience by analyzing feedback from multiple data sources, enabling data-driven business decisions.
                                     </p>
                                    <!-- <li><span>03/2023-05/2023</span><br>Software Development Engineer Intern</li> -->
-                                    <li><span>January 2022 - July 2022</span><br>Web Development Intern</li>
+                                    <li><span>February 2020 - July 2022</span><br>Research Software Engineer </li>
                                     <p>
-                                        Improved website responsiveness and enhanced user experience by optimizing loading time by 25% using JavaScript frameworks (React.js,
-                                        JQuery) and CSS animations, resulting in a 15% increase in user retention.
-                                        Integrated Bootstrap for consistent and responsive UI, ensuring cross-platform compatibility across desktop and mobile devices, leading
-                                        to a 10% increase in mobile traffic
+                                        ●	Refined the React JS UI to make it more responsive and integrated Token based logins to show data based on user role and improved website usability and smoothness by 50%. The app was used as a Cancer Screening application by Non profitable organization data which later would help assist the doctor to find potential patients with the disease
+                                        ●	Researched various feature extraction methods and built a pipeline to get actual color through color correction algorithms. It was applied to get the lossless color of skin to detect Anemia. The app was used by an organization in collecting data and predicting the candidates who may have had anemia.
+                                        ●	Developed an application for a digital library collection of books on an android TV using Kotlin and Flutter. This TV acted as a source of education for kids during class book reading sessions.
+
                                     </p>
                                 </ul>
                             </div>
