--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
                                    <!-- <li><span>03/2023-05/2023</span><br>Software Development Engineer Intern</li> -->
                                     <li><span>February 2020 - July 2022</span><br>Research Software Engineer </li>
                                     <p>
-                                        ●	Refined the React JS UI to make it more responsive and integrated Token based logins to show data based on user role and improved website usability and smoothness by 50%. The app was used as a Cancer Screening application by Non profitable organization data which later would help assist the doctor to find potential patients with the disease
-                                        ●	Researched various feature extraction methods and built a pipeline to get actual color through color correction algorithms. It was applied to get the lossless color of skin to detect Anemia. The app was used by an organization in collecting data and predicting the candidates who may have had anemia.
-                                        ●	Developed an application for a digital library collection of books on an android TV using Kotlin and Flutter. This TV acted as a source of education for kids during class book reading sessions.
+                                        	Refined the React JS UI to make it more responsive and integrated Token based logins to show data based on user role and improved website usability and smoothness by 50%. The app was used as a Cancer Screening application by Non profitable organization data which later would help assist the doctor to find potential patients with the disease
+                                        	
+                                            Researched various feature extraction methods and built a pipeline to get actual color through color correction algorithms. It was applied to get the lossless color of skin to detect Anemia. The app was used by an organization in collecting data and predicting the candidates who may have had anemia.
+                                        	
+                                            Developed an application for a digital library collection of books on an android TV using Kotlin and Flutter. This TV acted as a source of education for kids during class book reading sessions.
 
                                     </p>
                                 </ul>
